[package]
name = "tinychip"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

homepage = "https://github.com/theobori/tinychip"
description = "CHIP-8 emulator/interpreter"
repository = "https://github.com/theobori/tinychip"

keywords = [
    "Emulator",
    "CHIP8",
    "Games",
    "ROM",
    "Interpreter"
]

categories = [
    "emulators",
    "multimedia"
]

license = "MIT"
readme = "README.md"

[dependencies]
sdl2 = "0.35.2"
thiserror = "1.0.37"
structopt = "0.3.26"
rand = "0.8.5"
